fix porfolio overflow

--- a/css/style.css
+++ b/css/style.css
@@ -15,13 +15,14 @@
 #nav li{
   display:inline-block;
   font-size:18px;
-  padding-left: 20%;
-  margin-top: 5%;
+  padding-left: 5%;
+  padding-right: 5%;
+  margin-top: 8px;
 
 }
 #nav ul{
-
-margin-left: 65%;
+text-align: right;
+padding-right: 1px;
 }
 
  #pg1{
@@ -42,7 +43,7 @@ margin-left: 65%;
 }
 #pg2{
   font-family: 'Rajdhani', sans-serif;
-  height:70vh;
+  height:90vh;
   text-align: center;
   background-color: rgba(63, 191, 191);
 }
@@ -123,17 +124,16 @@ text-decoration: none;
 
 
   @media only screen and (max-width: 1200px) {
-    #pg2{
-      height:90vh;
+    #pg2  {
+      height: 1500px;
     }
     #pg2 h1 {
       font-size: 2vh;
     }
     .project{
-      padding-top: 4vh;
-      padding-bottom: 4vh;
+      padding-bottom: 1px;
       width: 100%;
-      height: 30vh;
+      height: auto;
     }
 
     #pg1 a h3 {
@@ -147,7 +147,7 @@ text-decoration: none;
 
     .project h2 {
       font-size: 2vh;
-      padding-top: 20px;
+      padding-top: 5px;
 
     }
     .project h3 {
@@ -167,3 +167,13 @@ text-decoration: none;
       height: 4vh;
     }
 }
+
+@media only screen and (max-width: 850px) {
+  #pg2  {
+    height: 1100px;
+  }
+
+  @media only screen and (max-width: 650px) {
+    #pg2  {
+      height: 100vh;
+    }
